--- a/src/components/Send/SweepBreakdown.module.css
+++ b/src/components/Send/SweepBreakdown.module.css
@@ -3,20 +3,33 @@
 }
 
 .sweepBreakdownTable {
-  color: var(--bs-black);
+  color: var(--bs-dark);
 }
 
 :root[data-theme='dark'] .sweepBreakdownTable {
-  color: var(--bs-white);
+  color: var(--bs-light);
 }
 
 .sweepBreakdownTable .balanceCol {
   text-align: right;
 }
 
+.sweepBreakdownAnchor {
+  font-size: 0.8rem;
+  color: var(--bs-dark);
+}
+
+:root[data-theme='dark'] .sweepBreakdownAnchor {
+  color: var(--bs-light) !important;
+}
+
+:root[data-theme='dark'] .sweepBreakdownParagraph {
+  color: var(--bs-light) !important;
+}
+
 .accordionButton {
   background-color: transparent;
-  color: var(--bs-black);
+  color: var(--bs-dark);
   display: flex;
   justify-content: flex-end;
   font-size: 0.8rem;
@@ -38,18 +51,5 @@
 }
 
 :root[data-theme='dark'] .accordionButton {
-  color: var(--bs-white);
-}
-
-.sweepBreakdownAnchor {
-  font-size: 0.8rem;
-  color: var(--bs-black);
-}
-
-:root[data-theme='dark'] .sweepBreakdownAnchor {
-  color: var(--bs-white) !important;
-}
-
-:root[data-theme='dark'] .sweepBreakdownParagraph {
-  color: var(--bs-white) !important;
+  color: var(--bs-light);
 }
