--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -38,8 +38,8 @@
 }
 
 .modal-footer :global .btn {
+  --bs-btn-border-color: var(--bs-border-color);
   flex-grow: 1;
   min-height: 2.8rem;
   font-weight: 500;
-  border-color: rgba(222, 222, 222, 1);
 }
