--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -69,7 +69,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   gap: 2rem;
   color: var(--bs-body-color);
@@ -90,6 +90,5 @@
   .jarsContainer {
     gap: 1.5rem;
     flex-wrap: nowrap;
-    justify-content: space-between;
   }
 }
