ui(menu): increase font size on mobile in side menu

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -18,3 +18,11 @@
 :global(.jam-reload-wallet-info-in-progress) .loadingIndicator {
   display: inline-block !important;
 }
+
+.offcanvasBody {
+  font-size: calc(var(--bs-body-font-size) * 1.5);
+}
+
+.offcanvasBody :global(.nav-link) {
+  width: 100%;
+}
