--- a/src/components/Jars.module.css
+++ b/src/components/Jars.module.css
@@ -11,6 +11,7 @@
   color: var(--bs-gray-500);
   border: 1px solid var(--bs-gray-500);
   border-radius: 50%;
+  cursor: help;
 }
 
 .jarsContainer {
