feat: align amount input fields (#711)
* ui(amount): add bitcoin amount input component

* ui(amount): format display value always in btc

* ui(Send): adapt amount field label and placeholder

* ui(Send): highlight sending options on input errors

* chore: do not display amount unit on empty input

* test: add tests for BitcoinAmountInput

--- a/src/components/Send/AmountInputField.module.css
+++ b/src/components/Send/AmountInputField.module.css
@@ -11,3 +11,10 @@
 .button {
   font-size: 0.875rem !important;
 }
+
+.inputGroupText {
+  width: 5ch;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
