--- a/src/components/Send/SweepBreakdown.module.css
+++ b/src/components/Send/SweepBreakdown.module.css
@@ -14,25 +14,13 @@
   text-align: right;
 }
 
-.sweepBreakdownAnchor {
-  font-size: 0.8rem;
-  color: var(--bs-dark);
-}
-
-:root[data-theme='dark'] .sweepBreakdownAnchor {
-  color: var(--bs-light) !important;
-}
-
-:root[data-theme='dark'] .sweepBreakdownParagraph {
-  color: var(--bs-light) !important;
-}
-
 .accordionButton {
   background-color: transparent;
   color: var(--bs-dark);
   display: flex;
   justify-content: flex-end;
   font-size: 0.8rem;
+  align-items: center;
   height: 1rem;
   padding: 0;
   box-shadow: none;
