--- a/src/components/Send/ShowUtxos.module.css
+++ b/src/components/Send/ShowUtxos.module.css
@@ -97,3 +97,8 @@
   border-radius: 3px !important;
   border: 1px solid #2d9cdb !important;
 }
+
+.utxoListDisplay {
+  margin-left: -20px;
+  margin-right: 20px;
+}
