ui(FB): deemphasise additional bond when one already exists (#758)
* de-emphasise multiple bonds

* de-emphasise multiple bonds

* ui(fb): de-emphasise additional bond

* ui(FB): button to center

* ui: button size small

* ui: existing bond text back

--- a/src/components/fb/CreateFidelityBond.module.css
+++ b/src/components/fb/CreateFidelityBond.module.css
@@ -25,7 +25,13 @@
   color: var(--bs-gray-600);
 }
 
-.header .subtitle a {
+.formMessageWhenBondAlreadyExists {
+  flex-shrink: 1;
+  font-size: 0.8rem;
+  color: var(--bs-gray-600);
+}
+
+.formMessageWhenBondAlreadyExists a {
   color: inherit;
 }
 
