--- a/src/components/fb/CreateFidelityBond.module.css
+++ b/src/components/fb/CreateFidelityBond.module.css
@@ -56,3 +56,16 @@
   color: 'white';
   border-radius: '50%';
 }
+
+.tabs {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+.tab {
+  cursor: pointer;
+  padding: 10px;
+  color: var(--bs-body-color);
+  background-color: var(--bs-gray-700);
+  margin-bottom: 5px;
+}
