ui:(FB) added timeLock address component

--- a/src/components/fb/CreateFidelityBond.module.css
+++ b/src/components/fb/CreateFidelityBond.module.css
@@ -85,10 +85,25 @@
   padding: 0.8rem 0.8rem;
   border-radius: 100%;
   background-color: var(--bs-gray-100);
-  color: var(--bs-body-color);
 }
 
 .step {
   position: absolute;
   color: var(--bs-gray-900);
+}
+
+.addressLabel {
+  color: var(--bs-gray-600);
+  font-size: 1rem;
+}
+
+.addressContent {
+  font-size: 1rem;
+  word-break: break-all;
+}
+
+.timelockedAddress {
+  text-align: left;
+  padding: 0;
+  font-size: 0.8rem;
 }
