Implemented suggested changes - Fixed sweep amount - Refactored code (naming) - Removed unnecessary warnings - Added minor improvements - Fixed a few bugs

--- a/src/components/Send/ShowUtxos.module.css
+++ b/src/components/Send/ShowUtxos.module.css
@@ -9,7 +9,7 @@
 }
 
 .depositUtxo {
-  background-color: none !important;
+  background-color: var(--bs-body-bg) !important;
   color: var(--bs-modal-color) !important;
 }
 
