--- a/src/components/ScheduleProgress.module.css
+++ b/src/components/ScheduleProgress.module.css
@@ -28,7 +28,8 @@
   width: 100%;
   height: var(--progress-bar-height);
   background-color: var(--progress-track-color);
-  border-radius: var(--progress-bar-corner-radius);
+  /* border-radius: var(--progress-bar-corner-radius); */
+  border-radius: 25%;
   z-index: -1;
   top: 0rem;
 }
@@ -110,13 +111,24 @@
   border-radius: 0 var(--progress-bar-corner-radius) var(--progress-bar-corner-radius) 0;
 }
 
+.jamPot {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 @keyframes pulse {
   0% {
     box-shadow: 0 0 0 0 rgba(39, 174, 96, 0.4);
   }
+
   70% {
     box-shadow: 0 0 0 10px rgba(39, 174, 96, 0);
   }
+
   100% {
     box-shadow: 0 0 0 0 rgba(39, 174, 96, 0);
   }
@@ -126,6 +138,7 @@
   0% {
     width: 0%;
   }
+
   100% {
     width: 100%;
   }
