Improved loading logic, Improved Modal.tsx, Reviewed and enhanced text wording

--- a/src/components/Send/ShowUtxos.module.css
+++ b/src/components/Send/ShowUtxos.module.css
@@ -77,3 +77,12 @@
 .utxoListDisplayHeight {
   max-height: 17.6rem;
 }
+
+.customHeaderClass {
+  background-color: var(--bs-gray-800) !important;
+  padding: var(--bs-modal-header-padding) !important;
+}
+
+.customTitleClass {
+  color: var(--bs-heading-color) !important;
+}
