--- a/src/components/Balance.module.css
+++ b/src/components/Balance.module.css
@@ -18,7 +18,7 @@
   --jam-balance-deemphasize-color: #1153b5;
 }
 
-.balance {
+.balanceColor {
   color: var(--jam-balance-color);
 }
 
@@ -53,32 +53,32 @@
   justify-content: center;
 }
 
-.bitcoinAmount .fractionalPart :nth-child(3)::before,
-.bitcoinAmount .fractionalPart :nth-child(6)::before {
+.bitcoinAmountSpacing .fractionalPart :nth-child(3)::before,
+.bitcoinAmountSpacing .fractionalPart :nth-child(6)::before {
   content: '\202F';
 }
 
 /** Integer Part **/
-.bitcoinAmount[data-integer-part-is-zero="true"] .integerPart,
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .integerPart,
 /** Decimal Point **/
-.bitcoinAmount[data-integer-part-is-zero="true"] .decimalPoint,
-.bitcoinAmount[data-fractional-part-starts-with-zero="true"] .decimalPoint,
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .decimalPoint,
+.bitcoinAmountColor[data-fractional-part-starts-with-zero="true"] .decimalPoint,
 /** Fractional Part **/
-.bitcoinAmount[data-integer-part-is-zero="false"] .fractionalPart,
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]),
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"],
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"],
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
-.bitcoinAmount[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
+.bitcoinAmountColor[data-integer-part-is-zero="false"] .fractionalPart,
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]),
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"],
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"],
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
+.bitcoinAmountColor[data-integer-part-is-zero="true"] .fractionalPart :nth-child(1):is(span[data-digit="0"]) + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"] + span[data-digit="0"],
 /** Symbol */
-.bitcoinAmount[data-raw-value="0"] + .bitcoinSymbol {
+.bitcoinAmountColor[data-raw-value="0"] + .bitcoinSymbol {
   color: var(--jam-balance-deemphasize-color);
 }
 
-.satsAmount[data-raw-value='0'],
-.satsAmount[data-raw-value='0'] + .satsSymbol {
+.satsAmountColor[data-raw-value='0'],
+.satsAmountColor[data-raw-value='0'] + .satsSymbol {
   color: var(--jam-balance-deemphasize-color);
 }
