--- a/src/components/SchedulerConfirmationModal.module.css
+++ b/src/components/SchedulerConfirmationModal.module.css
@@ -1,13 +1,3 @@
-:global .modal-backdrop {
-  background-color: rgba(0, 0, 0, 0.5) !important;
-}
-
-.modal :global .modal-content {
-  background-color: var(--bs-body-bg) !important;
-  border-radius: 1rem !important;
-  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.25) !important;
-}
-
 .modalHeader {
   display: flex !important;
   justify-content: flex-start !important;
@@ -25,30 +15,7 @@
   align-items: center;
 }
 
-.modalTitle .cancelButton {
-  padding: 0 0 0 1rem;
-  color: var(--bs-body-color);
-  background-color: transparent !important;
-  border: none;
-}
-
-.modalFooter {
-  display: flex !important;
-  justify-content: center !important;
-  gap: 1rem;
-  background-color: transparent !important;
-  padding: 1rem 1.25rem 1.25rem 1.25rem !important;
-}
-
-.modalFooter :global .btn {
-  flex-grow: 1;
-  min-height: 2.8rem;
-  font-weight: 500;
-  border-color: none !important;
-}
-
-@media only screen and (min-width: 768px) {
-  .jarsContainer {
-    gap: 1.5rem;
-  }
+.modalBody {
+  color: var(--bs-body-color) !important;
+  text-align: left !important;
 }
