--- a/src/components/utxo/UtxoIcon.module.css
+++ b/src/components/utxo/UtxoIcon.module.css
@@ -1,7 +1,5 @@
-.utxoIcon > .iconFrozen {
-  margin-bottom: 1px;
-}
-
-.utxoIcon > .iconLocked {
-  margin-bottom: 3px;
+.utxoIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
