ui: new joining indicator symbol

--- a/src/index.css
+++ b/src/index.css
@@ -465,13 +465,20 @@ table.striped tr:hover td {
 }
 
 .earn-indicator .activity-indicator-on {
-  animation-name: activity-indicator-pulse;
+  animation-name: activity-indicator-bg-pulse;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in;
 }
 
-@keyframes activity-indicator-pulse {
+.joining-indicator .activity-indicator-on {
+  animation-name: activity-indicator-font-pulse;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+}
+
+@keyframes activity-indicator-bg-pulse {
   0% {
     background-color: rgba(39, 174, 96, 0.2);
   }
@@ -479,7 +486,19 @@ table.striped tr:hover td {
     background-color: rgba(39, 174, 96, 1);
   }
   100% {
-    background-color: rgba(39, 174, 96, 0.2);
+    background-color: rgba(0, 255, 106, 0.2);
+  }
+}
+
+@keyframes activity-indicator-font-pulse {
+  0% {
+    color: rgba(39, 174, 96, 0.5);
+  }
+  50% {
+    color: rgba(39, 174, 96, 1);
+  }
+  100% {
+    color: rgba(39, 174, 96, 0.5);
   }
 }
 
