--- a/src/components/fb2/ExistingFidelityBond.module.css
+++ b/src/components/fb2/ExistingFidelityBond.module.css
@@ -1,11 +1,18 @@
 .container {
-  border: 1px solid var(--bs-gray-200);
+  border: 1px solid;
+  border-color: rgb(120, 200, 0);
+  border-radius: 0.3rem;
+  padding: 1.25rem;
+}
+
+.creatingContainer {
+  border: 1px solid var(--bs-gray-400);
   border-radius: 0.3rem;
   padding: 1.25rem;
 }
 
 :root[data-theme='dark'] .container {
-  border-color: var(--bs-gray-700);
+  border-color: rgb(148, 245, 2);
 }
 
 .expired {
@@ -18,6 +25,18 @@
 }
 
 .title {
+  width: 100%;
+  font-size: 1.2rem;
+  color: rgb(120, 200, 0);
+}
+
+.creatingTitle {
+  width: 100%;
+  font-size: 1.2rem;
+  color: var(--bs-body-color);
+}
+
+.titleExpired {
   width: 100%;
   font-size: 1.2rem;
   color: var(--bs-body-color);
