--- a/src/components/Send/ShowUtxos.module.css
+++ b/src/components/Send/ShowUtxos.module.css
@@ -31,7 +31,22 @@
   height: 24px;
 }
 
-.checkbox:checked,
-.checkbox:indeterminate {
+.checkbox-success:checked {
+  accent-color: #27ae60;
+}
+
+.checkbox-frozen:checked {
+  accent-color: #2d9cdb;
+}
+
+.checkbox-danger:checked {
+  accent-color: #eb5757;
+}
+
+.checkbox-normal:checked {
   accent-color: var(--bs-black);
+}
+
+:root[data-theme='dark'] .checkbox-normal:checked {
+  accent-color: var(--bs-white);
 }
