--- a/src/components/Send/ShowUtxos.module.css
+++ b/src/components/Send/ShowUtxos.module.css
@@ -2,48 +2,48 @@
   max-height: 15.7rem;
 }
 
+.row {
+  --jam-utxo-bg-color: transparent;
+  --jam-utxo-checkbox-accent-color: var(--jam-utxo-color);
+  background-color: var(--jam-utxo-bg-color) !important;
+  color: var(--jam-utxo-color) !important;
+}
+
+.row .checkbox {
+  width: 24px;
+  height: 24px;
+  accent-color: var(--jam-utxo-checkbox-accent-color);
+}
+
 .row.row-normal {
-  background-color: transparent !important;
+  --jam-utxo-bg-color: transparent;
+  --jam-utxo-checkbox-accent-color: var(--bs-black);
 }
-
 .row.row-success {
-  background-color: #27ae600d !important;
-  color: #27ae60 !important;
+  --jam-utxo-bg-color: #27ae600d;
+  --jam-utxo-color: #27ae60;
 }
-
 .row.row-warning {
-  background-color: #bb97200d !important;
-  color: #ebc957 !important;
+  --jam-utxo-bg-color: #bb97200d;
+  --jam-utxo-color: #ebc957;
 }
-
 .row.row-danger {
-  background-color: #eb57570d !important;
-  color: #eb5757 !important;
+  --jam-utxo-bg-color: #eb57570d;
+  --jam-utxo-color: #eb5757;
 }
-
 .row.row-frozen {
-  background-color: #2d9cdb0d !important;
-  color: #2d9cdb !important;
+  --jam-utxo-bg-color: #2d9cdb0d;
+  --jam-utxo-color: #2d9cdb;
+  --jam-utxo-checkbox-accent-color: var(--jam-utxo-color);
 }
 
 .row.row-dark {
   --bs-code-color: var(--bs-gray-600);
-  background-color: var(--bs-gray-200);
-  color: var(--bs-gray-600);
+  --jam-utxo-bg-color: var(--bs-gray-200);
+  --jam-utxo-color: var(--bs-gray-600);
 }
-
 :root[data-theme='dark'] .row.row-dark {
   --bs-code-color: var(--bs-gray-900);
-  background-color: var(--bs-gray-700);
-  color: var(--bs-gray-900);
-}
-
-.checkbox {
-  width: 24px;
-  height: 24px;
-}
-
-.checkbox:checked,
-.checkbox:indeterminate {
-  accent-color: var(--bs-black);
+  --jam-utxo-bg-color: var(--bs-gray-700);
+  --jam-utxo-color: var(--bs-gray-900);
 }
